[project]
name = "silvaengine-constants"
version = "0.0.1"
description = "The states and constants of the SilvaEngine framework."
authors = [
    {name = "IdeaBosque", email = "ideabosque@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
