[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "silvaengine-constants"
version = "0.0.1"
description = "The states and constants of the SilvaEngine framework."
authors = [
    {name = "IdeaBosque", email = "ideabosque@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = []

[tool.pyright]
typeCheckingMode = "basic"
reportCallIssue = "none"
reportArgumentType = "none"
reportAttributeAccessIssue = "none"
reportOptionalMemberAccess = "none"
reportIndexIssue = "none"
reportGeneralTypeIssues = "none"
reportSelfClsParameterName = "none"
